20000803-13:13 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/macro/macro.slx
     + added id tag
   * source/compiler/harbour.slx
     + added id tag
   * source/compiler/hbslex.c
     + added id tag

20000803-13:08 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * config/os2/global.cf
     + first command of clean: tag requires a double backslash

2000-08-03 01:55 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hberrors.h
     * Removed #define HB_PP_ERR_INCLUDE_CYCLIC

   * source/pp/ppcore.c
     * Removed Cyclic #include detection logic.

  * source/compiler/simplex.c
    * Removed some unneeded comments.

2000-08-02 19:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hberrors.h
     * Changed #define HB_PP_ERR_INCLUDE_SELF to HB_PP_ERR_INCLUDE_CYCLIC

   * source/pp/ppcore.c
     * Changed "Can\'t #include self \'%s\'" to "Cyclic #include not allowed: \'%s\'"
     * Changed self refernce #include detection, to detect any #include of an already opened file.

2000-08-02 14:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.l
     * Changed USUAL to ANYTYPE

2000-08-02 14:05 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     * Changed VARIANT to ANYTYPE as it appear to be the prefered choice.

   * source/compiler/hbpcode.c
     * Changed \[ to [ to correct compiler warnings.
     * Changed Usual. to AnyType.

2000-08-02 15:55 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * config/os2/global.cf
     ! Restored to version 1.2, because 1.3 had no tab
       characters, then reapplied the changes from 1.3
       to the restored 1.2 and committed it as 1.4.

2000-08-02 21:10 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *doc/whatsnew.txt
        * added polish language modules

    *source/compiler/harbour.l
        * fixed support for ANNOUNCE and _PROCREQ_
        * optimized some other rules

2000-08-02 14:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * config/c.cf