@@ -1,3 +1,7 @@
+2000-08-03 18:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
+  * source/compiler/harbour.c
+    * Added call to hb_pp_init() between multiple prg compilations.
+
 20000803-13:13 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
    * source/macro/macro.slx
      + added id tag
